// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works with the cache 1`] = `
Object {
  "height": 451,
  "images": Array [
    Object {
      "height": 451,
      "path": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg",
      "width": 501,
    },
  ],
  "src": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg",
  "srcSet": "foobar/0cbf4e06fb8adef26b85a194fc9d4c5d-501.jpg 501w",
  "toString": [Function],
  "width": 501,
}
`;

exports[`creates jpeg extension 1`] = `
Object {
  "height": 395,
  "images": Array [
    Object {
      "height": 395,
      "path": "foobar/598555c7d2adcfb1ba1a985910a3d1e5-439.jpeg",
      "width": 439,
    },
  ],
  "src": "foobar/598555c7d2adcfb1ba1a985910a3d1e5-439.jpeg",
  "srcSet": "foobar/598555c7d2adcfb1ba1a985910a3d1e5-439.jpeg 439w",
  "toString": [Function],
  "width": 439,
}
`;

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
  "srcSet": "foobar/8467bdd6e6ee43692327aa8efb258fd4-100.jpg",
  "toString": [Function],
}
`;

exports[`doesn't emit file 1`] = `
Object {
  "height": 225,
  "images": Array [
    Object {
      "height": 225,
      "path": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg",
      "width": 250,
    },
  ],
  "src": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg",
  "srcSet": "foobar/96ace3b661e096e716b4a62bcc3934d2-250.jpg 250w",
  "toString": [Function],
  "width": 250,
}
`;

exports[`jpg to webp 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/7f504de41e9e641521569e46d7c339ff-500.webp",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/89c1d47924fefa2b33b8b6f1d343dab0-750.webp",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/d002bffca8dea375467f089165593f94-1000.webp",
      "width": 1000,
    },
  ],
  "src": "foobar/d002bffca8dea375467f089165593f94-1000.webp",
  "srcSet": "foobar/7f504de41e9e641521569e46d7c339ff-500.webp 500w,foobar/89c1d47924fefa2b33b8b6f1d343dab0-750.webp 750w,foobar/d002bffca8dea375467f089165593f94-1000.webp 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/img/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/img/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/img/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/78a57c37d73de1a0df2e5e84a7c3a493-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/7d2980f5976397657aae4e66161cc660-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg",
  "srcSet": "foobar/test/78a57c37d73de1a0df2e5e84a7c3a493-500x450.jpg 500w,foobar/test/7d2980f5976397657aae4e66161cc660-750x675.jpg 750w,foobar/test/03fe31cc7d34b5317390ef55eaf9bc12-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg",
  "srcSet": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 180,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/5f2f5155b26fa7fed6fcc32f01aca2fa-200.jpg",
      "width": 200,
    },
  ],
  "src": "foobar/5f2f5155b26fa7fed6fcc32f01aca2fa-200.jpg",
  "srcSet": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg 100w,foobar/5f2f5155b26fa7fed6fcc32f01aca2fa-200.jpg 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`parses json notation 1`] = `
Object {
  "height": 180,
  "images": Array [
    Object {
      "height": 45,
      "path": "foobar/d29e4bda309a28b94d101aeeac15e622-50.webp",
      "width": 50,
    },
    Object {
      "height": 90,
      "path": "foobar/ab4bef82e752b1d075af5236c458073e-100.webp",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/004bbcf97542aa5c1e2434233b53ac16-200.webp",
      "width": 200,
    },
  ],
  "src": "foobar/004bbcf97542aa5c1e2434233b53ac16-200.webp",
  "srcSet": "foobar/d29e4bda309a28b94d101aeeac15e622-50.webp 50w,foobar/ab4bef82e752b1d075af5236c458073e-100.webp 100w,foobar/004bbcf97542aa5c1e2434233b53ac16-200.webp 200w",
  "toString": [Function],
  "width": 200,
}
`;

exports[`parses json notation with singleQuotes 1`] = `
Object {
  "height": 91,
  "images": Array [
    Object {
      "height": 47,
      "path": "foobar/064e7e9c9d1af8543b88b2331becb082-52.webp",
      "width": 52,
    },
    Object {
      "height": 91,
      "path": "foobar/8f3bb7e057d40b23a28b1eeed1232feb-102.webp",
      "width": 102,
    },
  ],
  "src": "foobar/8f3bb7e057d40b23a28b1eeed1232feb-102.webp",
  "srcSet": "foobar/064e7e9c9d1af8543b88b2331becb082-52.webp 52w,foobar/8f3bb7e057d40b23a28b1eeed1232feb-102.webp 102w",
  "toString": [Function],
  "width": 102,
}
`;

exports[`png 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/3cc2498602702597270522eed2774f4a-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/441052e71b6979cdaad82ca4441238f6-513.png",
      "width": 513,
    },
  ],
  "src": "foobar/441052e71b6979cdaad82ca4441238f6-513.png",
  "srcSet": "foobar/3cc2498602702597270522eed2774f4a-500.png 500w,foobar/441052e71b6979cdaad82ca4441238f6-513.png 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 595,
      "path": "foobar/3be3d439733bf4612f06454671ddb104-513.avif",
      "width": 513,
    },
  ],
  "src": "foobar/3be3d439733bf4612f06454671ddb104-513.avif",
  "srcSet": "foobar/3be3d439733bf4612f06454671ddb104-513.avif 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to avif 2`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/6a6e370f0c3de2a8e4d8fcb163a8f56b-500.avif",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7c263c61ccc2073336fc76a647525913-750.avif",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/be8cf316e8a5e5eaf2689cbd61bf9003-1000.avif",
      "width": 1000,
    },
  ],
  "src": "foobar/be8cf316e8a5e5eaf2689cbd61bf9003-1000.avif",
  "srcSet": "foobar/6a6e370f0c3de2a8e4d8fcb163a8f56b-500.avif 500w,foobar/7c263c61ccc2073336fc76a647525913-750.avif 750w,foobar/be8cf316e8a5e5eaf2689cbd61bf9003-1000.avif 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/8ef290c6aa9a99c26c88b600f62e8c73-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg",
      "width": 513,
    },
  ],
  "src": "foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg",
  "srcSet": "foobar/8ef290c6aa9a99c26c88b600f62e8c73-500.jpg 500w,foobar/fda6d212d96bfa688c5895e30079bf26-513.jpg 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`png to webp with transparent background 1`] = `
Object {
  "height": 595,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/efbbe56c2c29698c524ea3d6c104c453-500.webp",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp",
      "width": 513,
    },
  ],
  "src": "foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp",
  "srcSet": "foobar/efbbe56c2c29698c524ea3d6c104c453-500.webp 500w,foobar/f359c3bb5fc56fcc3e75193058a4311c-513.webp 513w",
  "toString": [Function],
  "width": 513,
}
`;

exports[`preserves rotation 1`] = `
Object {
  "height": 554,
  "images": Array [
    Object {
      "height": 554,
      "path": "foobar/7acf753645105aca043bba1037734416-499.jpg",
      "width": 499,
    },
  ],
  "src": "foobar/7acf753645105aca043bba1037734416-499.jpg",
  "srcSet": "foobar/7acf753645105aca043bba1037734416-499.jpg 499w",
  "toString": [Function],
  "width": 499,
}
`;

exports[`progressive image 1`] = `
Object {
  "height": 864,
  "images": Array [
    Object {
      "height": 684,
      "path": "foobar/a366eedb0a0ae21632438e6d488e8365-760.jpg",
      "width": 760,
    },
    Object {
      "height": 864,
      "path": "foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg",
      "width": 960,
    },
  ],
  "src": "foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg",
  "srcSet": "foobar/a366eedb0a0ae21632438e6d488e8365-760.jpg 760w,foobar/481f41d88cf3a0a41fd3f6a076222c68-960.jpg 960w",
  "toString": [Function],
  "width": 960,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "public/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,public/7d2980f5976397657aae4e66161cc660-750.jpg 750w,public/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`rotates 90 1`] = `
Object {
  "height": 666,
  "images": Array [
    Object {
      "height": 666,
      "path": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg",
      "width": 599,
    },
  ],
  "src": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg",
  "srcSet": "foobar/d12957441af3a63cafef04b5b5496ca5-599.jpg 599w",
  "toString": [Function],
  "width": 599,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
  ],
  "src": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 270,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/aa3b8300ebda3fea987abdf9d9882114-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/3f3eeb68a9bed05267734028c5aecb8b-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/7c60c8715bec52ab753a83903b738d58-300.jpg",
      "width": 300,
    },
  ],
  "src": "foobar/7c60c8715bec52ab753a83903b738d58-300.jpg",
  "srcSet": "foobar/0049f565d3e598f80b744f888ccaf30d-100.jpg 100w,foobar/aa3b8300ebda3fea987abdf9d9882114-167.jpg 167w,foobar/3f3eeb68a9bed05267734028c5aecb8b-234.jpg 234w,foobar/7c60c8715bec52ab753a83903b738d58-300.jpg 300w",
  "toString": [Function],
  "width": 300,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALBAAAQMDAwIGAgIDAAAAAAAAAQIDBAAFEQYSIQcxCBMiQVFhFDJxgSNSgv/EABgBAAMBAQAAAAAAAAAAAAAAAAABAwIE/8QAHBEAAwEBAAMBAAAAAAAAAAAAAAECEQMEEjEi/9oADAMBAAIRAxEAPwDx734dA/cGU2i4Q4EIq/yqKFlxCfhKckKP2SMVpK8M8tN1YWjVMd6EFEuhyGpLmPYABRB++RXSrzrEaO7JkONtMMpK3HFcJQkDJJPsBSk1N4g9FWuQti2MTL0pPHms4aaJ+lK5P8gVdzK+k02RK+eGW1yGiu2agfiyOf2jhTZ/oHI/o1F3/DprKzSok+0XK3XVxs5eaJLB/wCSrIPHzim1oTrvpfUl4ZtUuDKs8iSdrLjriXGlK9klQA25+SMU02pMN7HkyY7u47RscSrJ+OD3ocRSNTdS00JHRnR2S5KZm6tWx5SCFfgsK3biP919sfQ7/NFPEoBGO/0aKUcOcLEivXyevWtpiT1b0/6h3WxyxqzqGXbfHjrcW00A02vakn14CQRx3Oa5qMMuHc2pLiAAco9QI7c/Fd6zLdDmQnYsxhMhmQkodZc9SFg9wR2NL689JIz+sIOorSiBAMdSQ6x+MPKcSn9SEpwAocd+OB8Vmo34SVYIjpn01vd8XMlNlMF+3Ppa8uQClW7bnGPbgim30i6aTdNa1YvLjzCY6W1LlDzN298hQASMD0jcDn+am19tV6UFoQhvdL4clNN4XuA9JJByOBjJ7Vs9LLfqBnTezUbi3ZKZLnlvqSlKnW8+klI7e4rKj9D9nhLwUr5HA9xiiqeQU5IORRXRpMyoGVE5NWuZSeCaKKGBayoqCyrBrMrhIGe9FFCAByM+570UUUwP/9k=",
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;

exports[`with placeholder image on image with size 1`] = `
Object {
  "height": 360,
  "images": Array [
    Object {
      "height": 360,
      "path": "foobar/d6ffd74f8b036c86876b8341b9ac0c62-400.jpg",
      "width": 400,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/2wBDAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx7/2wBDAQUFBQcGBw4ICA4eFBEUHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh7/wAARCAAkACgDASIAAhEBAxEB/8QAHAAAAgEFAQAAAAAAAAAAAAAAAAcGAQIDBAgF/8QALBAAAQMDAwIGAgIDAAAAAAAAAQIDBAAFEQYSIQcxCBMiQVFhFDJxgSNSgv/EABgBAAMBAQAAAAAAAAAAAAAAAAABAwIE/8QAHBEAAwEBAAMBAAAAAAAAAAAAAAECEQMEEjEi/9oADAMBAAIRAxEAPwDx734dA/cGU2i4Q4EIq/yqKFlxCfhKckKP2SMVpK8M8tN1YWjVMd6EFEuhyGpLmPYABRB++RXSrzrEaO7JkONtMMpK3HFcJQkDJJPsBSk1N4g9FWuQti2MTL0pPHms4aaJ+lK5P8gVdzK+k02RK+eGW1yGiu2agfiyOf2jhTZ/oHI/o1F3/DprKzSok+0XK3XVxs5eaJLB/wCSrIPHzim1oTrvpfUl4ZtUuDKs8iSdrLjriXGlK9klQA25+SMU02pMN7HkyY7u47RscSrJ+OD3ocRSNTdS00JHRnR2S5KZm6tWx5SCFfgsK3biP919sfQ7/NFPEoBGO/0aKUcOcLEivXyevWtpiT1b0/6h3WxyxqzqGXbfHjrcW00A02vakn14CQRx3Oa5qMMuHc2pLiAAco9QI7c/Fd6zLdDmQnYsxhMhmQkodZc9SFg9wR2NL689JIz+sIOorSiBAMdSQ6x+MPKcSn9SEpwAocd+OB8Vmo34SVYIjpn01vd8XMlNlMF+3Ppa8uQClW7bnGPbgim30i6aTdNa1YvLjzCY6W1LlDzN298hQASMD0jcDn+am19tV6UFoQhvdL4clNN4XuA9JJByOBjJ7Vs9LLfqBnTezUbi3ZKZLnlvqSlKnW8+klI7e4rKj9D9nhLwUr5HA9xiiqeQU5IORRXRpMyoGVE5NWuZSeCaKKGBayoqCyrBrMrhIGe9FFCAByM+570UUUwP/9k=",
  "src": "foobar/d6ffd74f8b036c86876b8341b9ac0c62-400.jpg",
  "srcSet": "foobar/d6ffd74f8b036c86876b8341b9ac0c62-400.jpg 400w",
  "toString": [Function],
  "width": 400,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 900,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/7d2980f5976397657aae4e66161cc660-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
      "width": 1000,
    },
  ],
  "src": "foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg",
  "srcSet": "foobar/78a57c37d73de1a0df2e5e84a7c3a493-500.jpg 500w,foobar/7d2980f5976397657aae4e66161cc660-750.jpg 750w,foobar/03fe31cc7d34b5317390ef55eaf9bc12-1000.jpg 1000w",
  "toString": [Function],
  "width": 1000,
}
`;
